--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -23,12 +23,12 @@
   font-size: 20px;
 }
 
-.child {
-  color: red;
-  font-size: 14px;
-}
-
-div.text {
+.text {
   color: green;
   font-size: 22px;
+}
+
+.text.child {
+  color: red;
+  font-size: 14px;
 }
