--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -7,6 +7,7 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
@@ -24,4 +25,5 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
 }
