--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -20,10 +20,16 @@ body {
 
 .button-container {
   background: #e3f4ff;
+  margin-top: 8px;
+  text-align: center;
+  padding: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
   display: block;
+  margin: 0 auto;
+  padding: 5px 20px;
+  
 }
