--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -6,18 +6,19 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 0 auto;
   padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
-  margin: 8px 0;
+  margin: 0 0 8px 0;
   padding: 2px 4px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 8px;
 }
 
 .button-container {
