--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,6 +2,9 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
 }
 
 .logo {
@@ -10,12 +13,15 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  
 }
 
 ul {
   /* this removes the dots on the list items*/
+  padding: 0;
+  margin: 0;
   list-style-type: none;
+  display: flex;
+
 }
 
 a {
