--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -21,6 +21,7 @@ ul {
   margin: 0;
   list-style-type: none;
   display: flex;
+  padding: 8px;
 
 }
 
@@ -30,5 +31,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  margin: 10px;
+  margin: 5px;
 }
