--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,44 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* SOLUTION */
+
+.header {
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-container {
+  flex: 1;
+  display: flex;
+}
+
+.logo, .links a {
+  padding: 0 16px;
+}
+
+.links {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0;
+}
+
+.links a:nth-of-type(1){
+  padding-left: 0;
+}
+
+
+.right-container {
+  flex:1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 18px;
+}
+
+.notifications {
+  padding: 10px 20px;
+}
