--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -41,11 +41,12 @@ img {
 }
 
 .items {
-  width: 200px;
-  display: flex;
+  max-width: 200px;
+  
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
 /* .text {
  text-align: center;
