--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,14 +5,22 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
   text-decoration: none;
+  color: #585252;
 }
 
 li {
   list-style-type: none;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
 }
 
 img {
@@ -24,6 +32,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 15px;
+  font-size: 14px;
 }
 
 input {
@@ -31,9 +41,32 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
-  margin-bottom: 16px;
+  margin-bottom: 15px;
 }
 
-.header {
-  
+.header, .footer {
+  padding: 0 12px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-links, .right-links {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  gap: 4px;
+}
+
+.footer {
+  background-color: #eeeeee;
 }
